--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.7.2",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3"
   },
