--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3",
     "react-social-icons": "^6.10.0"
