--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3",
-    "react-social-icons": "^6.10.0"
+    "react-social-icons": "^6.10.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
