--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
