--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
     "lucide-react": "^0.316.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3",
     "react-social-icons": "^6.10.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
