--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-icons": "^5.0.1",
